--- a/src/base16-gigavolt.css
+++ b/src/base16-gigavolt.css
@@ -1,20 +1,21 @@
 /* Gigavolt by Aidan Swope (http://github.com/Whillikers) */
 
 :root {
-  --base00: #;
-  --base01: #;
-  --base02: #;
-  --base03: #;
-  --base04: #;
-  --base05: #;
-  --base06: #;
-  --base07: #;
-  --base08: #;
-  --base09: #;
-  --base0A: #;
-  --base0B: #;
-  --base0C: #;
-  --base0D: #;
-  --base0E: #;
-  --base0F: #;
+  --base00: #202126;
+  --base01: #2d303d;
+  --base02: #5a576e;
+  --base03: #a1d2e6;
+  --base04: #cad3ff;
+  --base05: #e9e7e1;
+  --base06: #eff0f9;
+  --base07: #f2fbff;
+  --base08: #ff661a;
+  --base09: #19f988;
+  --base0A: #ffdc2d;
+  --base0B: #f2e6a9;
+  --base0C: #fb6acb;
+  --base0D: #40bfff;
+  --base0E: #ae94f9;
+  --base0F: #6187ff;
 }
+
